# finalYear

./: .gitignore  Admin_Dashboard_Plan.md  BusTrack_System_Analysis.md  Bus_Dashboard_Plan.md  Chapter5_Results_and_Discussion.docx  Chapter5_Results_and_Discussion.md  README.md  SYSTEM_OVERVIEW.md
backend/: .coverage  .dockerignore  .env.example  .gitignore  ANALYSIS_BUS_GPS.md  API_ENDPOINTS.md  Dockerfile  IMP.md  MOBILE_APP_README.md  PAIRING_GUIDE.md  PLAN.md  abcd.txt  alembic.ini  asyncio  docker-compose.prod.yml  docker-compose.yml  esp.ino  openapi.json  pyproject.toml  pytest.ini  requirements-ml.txt  requirements.txt  test_cv_pipeline.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/config/: mosquitto.conf
backend/diagram/: er_diagram.drawio  er_diagram.mmd
backend/docs/: CV_DENSITY.md  IMPLEMENTATION.md  IOT_INTEGRATION.md  SIMULATION_AND_ADMIN_MAP.md  TECHNICAL.md  diagrams.md
backend/migrations/: env.py
backend/scripts/: generate_ml_reports.py  run_benchmarks.py  seed_addis_ababa_routes.py  simulate_bus.py  smoke_simulation.sh
backend/simulation/: 00_check.py  01_setup.py  02_simulate_buses.py  02_simulate_buses_esp32.py  03_simulate_passengers.py  04_full_simulation.py  04_full_simulation_esp32.py  README.md  api_client.py  bus_image_generator.py  config.py  gps_bus_simulator.py  gps_utils.py  route_loader.py  simulation_state.json  validate_esp32_simulation.py
backend/storage/: firewall_blocklist.txt
backend/terraform/: .gitignore  DEPLOYMENT_GUIDE.md  main.tf  setup_env.sh  variables.tfvars.example
(+177 files in other folders)
